syntax = "proto3";

package api.pull.v1.strategy;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "prometheus-manager/api/pull/v1/strategy;strategy";
option java_multiple_files = true;
option java_package = "api.pull.v1.strategy";

service Strategies {
	rpc CreateStrategies (CreateStrategiesRequest) returns (CreateStrategiesReply);
	rpc UpdateStrategies (UpdateStrategiesRequest) returns (UpdateStrategiesReply);
	rpc DeleteStrategies (DeleteStrategiesRequest) returns (DeleteStrategiesReply);
	rpc GetStrategies (GetStrategiesRequest) returns (GetStrategiesReply);
	rpc ListStrategies (ListStrategiesRequest) returns (ListStrategiesReply);
}

message CreateStrategiesRequest {}
message CreateStrategiesReply {}

message UpdateStrategiesRequest {}
message UpdateStrategiesReply {}

message DeleteStrategiesRequest {}
message DeleteStrategiesReply {}

message GetStrategiesRequest {}
message GetStrategiesReply {}

message ListStrategiesRequest {}
message ListStrategiesReply {}